UI: Nueva Side Drawer estilo InDriver, perfil hero y limpieza de menu lateral en MapScreen